OpenLDAP 2.4 Change Log

OpenLDAP 2.4.25 Engineering

OpenLDAP 2.4.24 Release (2011/02/10)
	Added LDIF line wrapping setting (ITS#6645)
	Added MozNSS support (ITS#6714,ITS#6742,ITS#6790,ITS#6791)
	Added MozNSS support (ITS#6802,ITS#6811,ITS#6816,ITS#5696)
	Added libldap cert x500UniqueIdentifier handling (ITS#6741)
	Added libldap_r,libldap formal concurrency API (ITS#6625,ITS#5421)
	Added slapadd attribute value checking (ITS#6592)
	Added slapcat continue mode for problematic DBs (ITS#6482)
	Added slapd syncrepl suffixmassage support (ITS#6781)
	Added slapd multiple listener threads (ITS#6780)
	Added slapd extensible match for ordering rules (ITS#6532)
	Added slapd-meta paged results control forwarding (ITS#6664)
	Added slapd-meta subtree-include support (ITS#6801)
	Added slapd-null back-config support (ITS#6624)
	Added slapd-sql autocommit support (ITS#6612)
	Added slapd-sql support for long long keys (ITS#6617)
	Added slapo-sssvlv multiple sorts per connection (ITS#6686)
	Added contrib/autogroup LDAP URI with attribute filter (ITS#6536)
	Added contrib/dupent module (ITS#6630)
	Added contrib/lastbind (ITS#6238)
	Added contrib/kinit for kerberos tickets
	Added contrib/noopsrch for entry counting (ITS#6598)
	Fixed client tools control logging (ITS#6775)
	Fixed client tools one time leak (ITS#6778)
	Fixed liblber to not close invalid sockets (ITS#6585)
	Fixed liblber unmatched brace handling (ITS#6764)
	Fixed liblber error setting (ITS#6732)
	Fixed liblber memory debugging (ITS#6733)
	Fixed libldap connectionless warnings (ITS#6747)
	Fixed libldap dnssrv port format specifier (ITS#6644)
	Fixed libldap EOF handling (ITS#6723)
	Fixed libldap GnuTLS hang on socket close (ITS#6673)
	Fixed libldap sasl partial write handling (ITS#6639)
	Fixed libldap search leak (ITS#6453)
	Fixed libldap referral chasing (ITS#6602)
	Fixed libldap leak when chasing referrals (ITS#6744)
	Fixed libldap url parsing with NULL host (ITS#6653)